--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.6.5",
+    "prisma": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
