--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.6.5",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "^8.23.1",
     "prisma": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
