--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "migrate": "npx prisma migrate dev",
     "studio": "npx prisma studio",
     "lint": "eslint ./src --ext .ts",
-    "lint:fix": "eslint ./src --ext .ts --fix"
+    "lint:fix": "eslint ./src --ext .ts --fix",
+    "test": "jest --no-cache"
   },
   "keywords": [],
   "author": "",
@@ -18,14 +19,17 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.2",
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "^8.23.1",
+    "jest": "^29.0.3",
     "prisma": "^4.3.1",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.3"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
