--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "default",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "build": "tsc && npx prisma migrate deploy",
-    "start": "node dist/app.js",
-    "dev": "npx nodemon ./src/app.ts",
+    "start": "node dist/server.js",
+    "dev": "npx nodemon ./src/server.ts",
     "migrate": "npx prisma migrate dev",
     "studio": "npx prisma studio",
     "lint": "eslint ./src --ext .ts",
