--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "studio": "npx prisma studio",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --ext .ts --fix",
-    "test": "jest --no-cache"
+    "test": "jest -i --no-cache"
   },
   "keywords": [],
   "author": "",
@@ -22,11 +22,13 @@
     "@types/jest": "^29.0.2",
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "^8.23.1",
     "jest": "^29.0.3",
     "prisma": "^4.3.1",
+    "supertest": "^6.2.4",
     "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
