--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.2",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -40,6 +41,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0"
   }
 }
