--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "studio": "npx prisma studio",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --ext .ts --fix",
-    "test": "jest -i --no-cache"
+    "test": "dotenv -e .env.test jest -i --no-cache",
+    "dbtest": "dotenv -e .env.test prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
+    "dotenv-cli": "^6.0.0",
     "eslint": "^8.23.1",
     "jest": "^29.0.3",
     "prisma": "^4.3.1",
