--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --ext .ts --fix",
     "test": "dotenv -e .env.test jest -i --no-cache",
-    "dbtest": "dotenv -e .env.test prisma migrate dev"
+    "db:test": "dotenv -e .env.test prisma migrate dev",
+    "seed:test": "dotenv -e .env.test prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
