--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "eslint ./src --ext .ts --fix",
     "test": "dotenv -e .env.test jest -i --no-cache",
     "test:migrate": "dotenv -e .env.test prisma migrate dev",
+    "test:studio": "dotenv -e .env.test npx prisma studio",
     "test:seed": "dotenv -e .env.test prisma db seed"
   },
   "prisma": {
