--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.23.1",
     "jest": "^29.0.3",
+    "nodemon": "^2.0.20",
     "prisma": "^4.3.1",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.1",
