--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
 JWT_SECRET=secret
 BCRYPT_SALT=10
-DATABASE_URL=postgres://postgres:kiro@localhost:5432/repo-provas-test
+DATABASE_URL=postgres://postgres:kiro@localhost:5432/repo-provas-test4
