--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc && npx prisma migrate deploy",
+    "build": "tsc && npx prisma migrate deploy && npm run seed",
     "start": "node ./dist/src/server.js",
     "dev": "npx nodemon ./src/server.ts",
     "migrate": "npx prisma migrate dev",
